# Minecraft-Littletiles-Reader

./: CMakeLists.txt  README.md  main.cpp
Galib/: Exception.cpp  Exception.h  File.cpp  File.h  GalibNamespaceDef.h
Galib/Coord/: Coord.h  Coord2D.h  Coord3D.h  CoordString.h  CoordTraits.h
Galib/Exception/: GalibExceptionBasic.h  MinecraftException.cpp  MinecraftException.h
Galib/File/: FileOperator.h  FileState.cpp  FileState.h  PathFormat.cpp  PathFormat.h
Galib/Minecraft/: Anvil.cpp  Anvil.h  Coord.cpp  Coord.h  LittleTiles.cpp  LittleTiles.h  LittleTilesObjBuilder.cpp  LittleTilesObjBuilder.h  MinecraftCoord.cpp  MinecraftCoord.h
